kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
spec:
  selector:
    app: demo-app-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
